--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Pacific Trails Resort</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="pacific.css">
+<meta name="viewport"
+content="width=device-width, initial scale=1.0">
 </head>
 <body>
 <div id="wrapper">
@@ -13,8 +15,8 @@
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="yurts.html">Yurts</a></li> 
-  <li><a href="activities.html">Activities</a></li> 
+  <li><a href="yurts.html">Yurts</a></li>
+  <li><a href="activities.html">Activities</a></li>
   <li><a href="reservations.html">Reservations</a></li>
 </ul>
 </nav>
@@ -34,7 +36,8 @@ Coast with panoramic views of the Pacific Ocean. Your stay at Pacific Trails Res
 <span class="resort">Pacific Trails Resort</span><br>
 12456 Pacific Trails Road<br>
 Zephyr, CA 95555<br><br>
-888-555-5555<br><br>
+<a id="mobile" href="tel:888-555-5555">888-555-5555</a><br><br>
+<span id="desktop">888-555-5555</span>
 </div>
 </main>
 <footer>
