--- a/yurts.html
+++ b/yurts.html
@@ -4,6 +4,8 @@
 <title>Pacific Trails Resort :: Yurts</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="pacific.css">
+<meta name="viewport"
+content="width=device-width, initial scale=1.0">
 </head>
 <body>
 <div id="wrapper">
@@ -13,8 +15,8 @@
 <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="yurts.html">Yurts</a></li> 
-  <li><a href="activities.html">Activities</a></li> 
+  <li><a href="yurts.html">Yurts</a></li>
+  <li><a href="activities.html">Activities</a></li>
   <li><a href="reservations.html">Reservations</a></li>
 </ul>
 </nav>
